1999-01-27  Bruce Korb  <autogen@linuxbox.com>

	* fixinc/fixincl.c, fixinc/server.[ch]:
	Removed the last of the capitalized variable and proc names.

	* fixinc/server.c:  Removed the process open code
	* fixinc/procopen.c: New file containing the proc open code

1999-01-15  Manfred Hollstein  <manfred@s-direktnet.de>

	* configure.in (fixinc_defs): Do not define for m[68]8k-motorola-sysv{,3};
	it's working properly now.  Remove comment saying "see m68k-motorola-sysv
	as an example".
	* configure: Regenerate using autoconf.

	* fixinc/fixincl.c (main): Do not ignore SIGCHLD.

1999-01-13  Manfred Hollstein  <manfred@s-direktnet.de>

	* fixinc/fixincl.c (create_file): Pass file creation mask as
	third parameter to "open".  Use O_TRUNC flag to open instead of
	explicitly unlink'ing the file.
	(process): and forget about the "chmod" stuff.

1999-01-12  Manfred Hollstein  <manfred@s-direktnet.de>

	* configure: Regenerate using autoconf.

	* fixinc/Makefile.in (INCLUDES): Add -I$(srcdir)/../../include.
	* fixinc/fixincl.c (SIGCHLD): Use SIGCLD on (very) old systems.
	(process): "fchmod" isn't available on all systems, use "chmod"
	instead.
	* fixinc/server.c: Add #include <sys/types.h>.
	(STDIN_FILENO): Add default definition if no include file defines
	it already.
	(STDOUT_FILENO): Likewise.

>>>>>>> 1.2710.2.7
Thu Jan 7  9:25:58 PST 1999 Bruce Korb (korb@datadesign.com)

	* fixinc/fixincl.c (*): more decapitalization of variables
	plus some explanitory comments

	* fixinc/Makefile.in fixinc/mkfixinc.sh:
	When the fixincl program does not work for a certain system,
	we substitute a shell script.  Added user commentary when
	this happens.

1999-01-06  Manfred Hollstein  <manfred@s-direktnet.de>

	* fixinc/fixincl.c: Re-indent according to the GNU standards.
	fixinc/server.c: Likewise.
	fixinc/server.h: Likewise.

Tue Jan 5  8:52:18 PST 1999 Bruce Korb (korb@datadesign.com)

	* fixinc/fixincl.c (various): added debug code so
	Manfred can trace the processing.
